--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/PavelNovotny/javascript-patterns/issues"
   },
-  "homepage": "https://github.com/PavelNovotny/javascript-patterns#readme"
+  "homepage": "https://github.com/PavelNovotny/javascript-patterns#readme",
+  "dependencies": {
+    "es6-promisify": "^5.0.0"
+  }
 }
